# tui-backend

./: .dockerignore  .env.example  .env.rate_limit.example  .gitignore  .pre-commit-config.yaml  .zshrc  2-5d-piece.html  AGENT_DEPLOYMENT_GUIDE.md  AGENT_DEPLOYMENT_STRATEGY.md  AI_ANALYSIS_FRAMEWORK_IMPLEMENTATION_PLAN.md  AI_BASELINE_TEST_MODIFICATION_PLAN.md  AI_CONTEXT.md  AI_CURRENT_PLAYS_IMPLEMENTATION_SUMMARY.md  AI_DECISION_ANALYSIS_RESULTS.md  AI_DECISION_DISCUSSION_FRAMEWORK.md  AI_DECLARATION_EXAMPLES.md  AI_DECLARATION_IMPLEMENTATION.md  AI_DECLARATION_IMPLEMENTATION_PLAN.md  AI_DECLARATION_IMPLEMENTATION_SUMMARY.md  AI_DECLARATION_PLAN_SUMMARY.md  AI_DECLARATION_REVISION_PLAN.md  AI_DECLARATION_STRATEGY.md  AI_DECLARATION_TECHNICAL_SPEC.md  AI_DECLARATION_V2_IMPLEMENTATION_SUMMARY.md  AI_ENHANCEMENT_CLARIFICATION.md  AI_HAND_EVALUATION_CONSISTENCY_PLAN.md  AI_HAND_EVALUATION_CONSISTENCY_SUMMARY.md  AI_HAND_EVALUATION_EXPLAINED.md  AI_IMPLEMENTATION_SUMMARY.md  AI_IMPROVEMENT_IMPLEMENTATION_PLAN.md  AI_IMPROVEMENT_SUMMARY.md  AI_OVERCAPTURE_AVOIDANCE_COMPLETE.md  AI_OVERCAPTURE_FIX_SUMMARY.md  AI_PHASE4_COMPLETION_SUMMARY.md  AI_PILE_COUNTING_FIX_SUMMARY.md  AI_STRATEGIC_IMPROVEMENTS.md  AI_STRONG_COMBO_FIX_PLAN.md  AI_SYSTEM_ARCHITECTURE.md  AI_TEST_REPORT.md  AI_TURN_HISTORY_IMPLEMENTATION_SUMMARY.md  (+424 more)
backend/: .env.adapter.example  .env.example  .isort.cfg  .pylintrc  ADAPTER_DEPLOYMENT_RUNBOOK.md  ADAPTER_INTEGRATION_COMPLETE.md  ARCHITECTURE_MIGRATION_STATUS.md  ARCHITECTURE_OVERVIEW.md  ASYNC_PATTERNS_GUIDE.md  BACKEND_IMPLEMENTATION_SOLUTION.md  (+222 more)
(+1743 files in other folders)
